tests/baselines/reference/slashBeforeVariableDeclaration1.errors.txt
==== tests/cases/compiler/slashBeforeVariableDeclaration1.ts (2 errors) ====
    \ declare var v;
    ~
!!! slashBeforeVariableDeclaration1.ts(1,1): error TS1001: Unexpected character "\".
    ~
!!! slashBeforeVariableDeclaration1.ts(1,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.